# loveda

./: .gitignore  AGENTS.md  README.md  evaluate.py  infer.py  pyproject.toml  train.py
notebooks/: loveda_uda_brainstorm.ipynb
outputs/dataset/: channel_summary.csv  class_distribution_summary.csv  large_padding_images.csv  mask_class_pixel_counts.csv  random_black_pixel_check.csv  sample_inventory.csv  split_domain_summary.csv
outputs/dataset/coverage/: class_image_presence_summary.csv  rare_class_summary.csv
outputs/dataset/domain_shift/: class_drift_summary.csv  image_feature_drift.csv
outputs/dataset/full_rgb_mt/: padding_summary.csv  quantization_channel_summary.csv  quantization_modulo_profiles.csv  quantization_report.md  rgb_global_stats.csv  rgb_histograms.csv
outputs/dataset/integrity/: exact_duplicate_pairs.csv  file_integrity_checks.csv  integrity_summary.csv  leakage_summary.csv  near_duplicate_pairs.csv
outputs/dataset/mask_mt/: class_adjacency.csv  class_cooccurrence.csv  mask_group_class_distribution.csv  mask_group_summary.csv  mask_sample_class_counts.csv
outputs/dataset/outliers/: mask_outliers.csv  rgb_outliers.csv
scripts/: cache_segformer_b2.py  check_random_black_pixels.py  count_large_padding_images_mt.c  loveda_advanced_eda.py  loveda_download.sh  loveda_mask_eda_mt.c  loveda_rgb_eda_mt.c
src/datasets/: __init__.py  loveda.py
src/losses/: segmentation.py
src/metrics/: segmentation.py
src/models/: __init__.py  segformer.py
src/transforms/: augmentations.py
src/utils/: __init__.py  constants.py  io.py
(+13 files in other folders)
